--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <style>
   :root{
-    --accent1:#ff6a00; /* برتقالي */
-    --accent2:#ff3b30; /* أحمر */
+    --accent1:#ff6a00;
+    --accent2:#ff3b30;
     --muted:#f7f7f7;
     --card:#ffffff;
     --text:#111;
@@ -21,11 +21,8 @@
     margin:0;
     background:var(--muted);
     color:var(--text);
-    -webkit-font-smoothing:antialiased;
-    -moz-osx-font-smoothing:grayscale;
   }
 
-  /* HEADER */
   .topbar{
     display:flex;
     align-items:center;
@@ -64,11 +61,9 @@
   .btn-solid{background:#fff;color:var(--accent2)}
   .btn-red{background:var(--accent2); color:#fff}
 
-  /* LAYOUT */
   .wrap{max-width:1100px;margin:20px auto;padding:0 18px;display:grid;grid-template-columns:1fr 320px;gap:20px}
   .panel{background:var(--card);border-radius:var(--radius);padding:18px;box-shadow:0 6px 18px rgba(0,0,0,0.06)}
 
-  /* ORDERS LIST - vertical cards */
   .orders-list{display:flex;flex-direction:column;gap:18px}
   .order-card{
     display:flex;flex-direction:column;background:#fff;border-radius:12px;overflow:hidden;
@@ -82,11 +77,9 @@
   .order-delivery{color:#666;font-size:14px}
   .order-actions{margin-top:8px;display:flex;gap:8px;flex-wrap:wrap}
 
-  /* ADMIN PANEL */
   .admin-panel .btn{width:100%}
   .small{font-size:13px;padding:7px 10px;border-radius:8px}
 
-  /* MODAL */
   .modal {
     position:fixed;inset:0;display:none;align-items:center;justify-content:center;
     background:linear-gradient(180deg, rgba(0,0,0,0.45), rgba(0,0,0,0.45));z-index:120;
@@ -96,7 +89,6 @@
   .field{margin-bottom:12px}
   input[type=text], input[type=file] {width:100%;padding:10px;border-radius:8px;border:1px solid #e6e6e6}
 
-  /* RESPONSIVE */
   @media (max-width:900px){
     .wrap{grid-template-columns:1fr; padding-bottom:34px}
     .order-media{height:220px}
@@ -107,7 +99,7 @@
 
   <header class="topbar">
     <div class="brand">
-      <div class="logo-circle" title="Uber Albalad">
+      <div class="logo-circle">
         <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='34' height='34'><rect rx='8' width='34' height='34' fill='%23ffffff'/><text x='50%' y='55%' font-size='18' text-anchor='middle' fill='%23ff6a00' font-family='Tahoma' font-weight='700'>UA</text></svg>" alt="logo">
       </div>
       <div class="brand-title">Uber Albalad</div>
@@ -121,7 +113,7 @@
 
   <main class="wrap">
 
-    <!-- ADMIN PANEL (مرفوع فوق الطلبات) -->
+    <!-- ADMIN PANEL (فوق الطلبات) -->
     <aside class="panel admin-panel" id="adminPanel" style="display:none">
       <h3 style="margin-top:0">لوحة المشرف</h3>
       <button class="btn btn-red small" id="addBtn">إضافة طلب</button>
@@ -139,9 +131,9 @@
 
   </main>
 
-  <!-- MODAL ADD -->
-  <div id="addModal" class="modal" aria-hidden="true">
-    <div class="modal-box" role="dialog" aria-modal="true">
+  <!-- ADD MODAL -->
+  <div id="addModal" class="modal">
+    <div class="modal-box">
       <h3 style="margin-top:0">إضافة طلب جديد</h3>
       <div class="field">
         <input id="itemName" type="text" placeholder="اسم المنتج">
@@ -207,7 +199,7 @@
 
   adminBtn.addEventListener("click", () => {
     const code = prompt("ادخل كود المشرف:");
-    if (code === "010500") {   // ← ← ← تم تغيير الكود هنا
+    if (code === "010281540") {   // ← ← ← الكود الجديد هنا
       isAdmin = true;
       adminPanel.style.display = "block";
       logoutBtn.style.display = "inline-block";
@@ -261,7 +253,7 @@
       });
       closeAddModal();
     } catch(e){
-      alert("حصل خطأ أثناء رفع الصورة");
+      alert("خطأ أثناء رفع الصورة");
     } finally {
       saveBtn.disabled = false;
       saveBtn.textContent = "حفظ";
